--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Marketplace",
   "version": "0.1.0",
-  "homepage": "https://LiveParadox96.github.io/Marketplace",
+  "homepage": "https://LiveParadox96.github.io",
   "private": true,
   "dependencies": {
     "@pbe/react-yandex-maps": "^1.2.2",
